...
    <string name="billing_unsupported_title">"Only supported for apps from Google Play"</string>
    <string name="cancel">"Cancel"</string>
    <string name="cancel_print">"Cancel Print"</string>
    <string name="cancel_print_confirmation_action">"Cancel print"</string>
    <string name="cancel_print_confirmation_message">"Do you want to cancel the print?"</string>
...

    <!-- Auto filled -->
    <string name="connect_printer___action_change_octoprint">"Switch OctoPrint"</string>

    <!-- Auto filled -->
...

    <!-- Auto filled -->
    <string name="connect_printer___action_turn_psu_off">"Turn off PSU"</string>

    <!-- Auto filled -->
    <string name="connect_printer___action_turn_psu_on">"Turn PSU on"</string>

    <!-- Auto filled -->
    <string name="connect_printer___auto_selection_failed">"Unable to auto-detect port, selecting first"</string>
    <string name="connect_printer___begin_connection">"Connect Printer"</string>
    <string name="connect_printer___begin_connection_cofirmation_negative">@string/cancel</string>
    <string name="connect_printer___begin_connection_cofirmation_positive">"Connect Printer"</string>
    <string name="connect_printer___begin_connection_confirmation_message"><![CDATA[Start connecting the printer?<br><small>This will interrupt ongoing prints from SD card!</small>]]></string>

...

    <!-- Auto filled -->
    <string name="connect_printer___octoprint_not_available_title">"OctoPrint is not available"</string>

    <!-- Auto filled -->
...
    <string name="connect_printer___waiting_for_printer_title">"OctoPrint connected, waiting for printer"</string>
    <string name="connect_printer___waiting_for_user_subtitle">"You can enable auto-connect in the settings"</string>
    <string name="connect_printer___waiting_for_user_title">"Connect when you are ready"</string>
    <string name="connection_failed">"Connection failed"</string>
    <string name="distance_in_mm_negative_for_retract">"Distance in mm (negative for retract)"</string>
...
    <string name="tune_print___feed_rate_label">"Feed Rate (%)"</string>
    <string name="tune_print___feed_rate_label_active">"Feed rate as number (100 is default)"</string>
    <string name="file_manager___file_details___filament_use">"Filament use"</string>
    <string name="file_manager___file_details___file">"File"</string>
    <string name="file_manager___file_details___tab_info">"Info"</string>
    <string name="file_manager___file_details___tab_preview">"Preview"</string>
    <string name="file_manager___file_details___file_location_local">"Local"</string>
    <string name="file_manager___file_details___file_location_sd_card">"SD card"</string>
...
    <!-- Auto filled -->
    <string name="help___content_not_available">"This content is currently not available. Try again later!"</string>
    <string name="hide">"Hide"</string>
    <string name="file_manager___file_details___history">"History"</string>
    <string name="rich_stream_disabled_title">"HLS/RTSP webcam stream"</string>
...
    <string name="insert">"Insert"</string>
    <string name="label_for_x">"Label for %s"</string>
    <string name="file_manager___file_details___last_print">"Last print"</string>
    <string name="file_manager___file_details___last_print_at_x_failure">"%s (failure)"</string>
    <string name="file_manager___file_details___last_print_at_x_success">"%s (success)"</string>
...
    <string name="layer_progress">"Layer Progress"</string>
    <string name="learn_more">"Learn more"</string>
    <string name="less_than_a_minute">"&lt; 1 min"</string>
    <string name="loading">"Loading…"</string>
    <string name="location">"Location"</string>

    <!-- Auto filled -->
...
    <string name="main_menu___item_show_printer">"Printer"</string>
    <string name="main_menu___item_show_settings">"Settings"</string>
    <string name="main_menu___item_sign_out">"Permanently sign out"</string>
    <string name="main_menu___item_support_octoapp">"Support OctoApp"</string>
    <string name="main_menu___item_temperature_presets">"Temperature presets"</string>
...

    <!-- Auto filled -->
    <string name="main_menu___switch_to_octoprint">"Activate „%s“"</string>
    <string name="main_menu___system_command_executed">"„%s“ executed"</string>

...
    <!-- Auto filled -->
    <string name="main_menu___title_confirm_power_off">"Confirm power off"</string>
    <string name="main_menu___title_quick_switch">"Switch OctoPrint"</string>
    <string name="main_menu___title_quick_switch_disabled">"Quick switch disabled"</string>

    <!-- Auto filled -->
...

    <!-- Auto filled -->
    <string name="material_menu___print_without_selection">"Print without selection"</string>

    <!-- Auto filled -->
...

    <!-- Auto filled -->
    <string name="material_menu___title_select_material">"Select material to use"</string>
    <string name="menu___completed_command">"Success: „%s“"</string>
    <string name="menu___executing_command">"Executing: „%s“"</string>
...
    <string name="mm_10">"10 mm"</string>
    <string name="mm_100">"100 mm"</string>
    <string name="file_manager___file_details___model_size">"Model size"</string>
    <string name="move">"Move"</string>
    <string name="move_settings">"Movement settings"</string>
...
    <string name="open_terminal">"Open Terminal"</string>
    <string name="other">"Other"</string>
    <string name="file_manager___file_details___path">"Path"</string>
    <string name="pause">"Pause"</string>
    <string name="pause_print_confirmation_action">"Pause print"</string>
    <string name="pause_print_confirmation_message">"Do you want to pause the print?"</string>
    <string name="pause_the_print_to_send_commands">"Pause the print to send commands."</string>
    <string name="pausing">"Pausing…"</string>
    <string name="please_configure_your_webcam_in_octoprint">"Please configure your webcam in Octoprint"</string>
    <string name="power_controls___always_use_this_device">"Always use this device for this action"</string>
...
    <!-- Auto filled -->
    <string name="print_notification___reconnecting_title">"Reconnecting…"</string>
    <string name="file_manager___file_details___print_time">"Print time"</string>
    <string name="purchase_dialog_button">"Back to the app"</string>
    <string name="purchase_dialog_subtitle">"All features have been unlocked"</string>
...
    <string name="resume_print_confirmation_message">"Do you want to resume the print?"</string>
    <string name="screenshot_of_current_screen">"Screenshot of current screen"</string>
    <string name="file_manager___file_list___your_files">"Your files"</string>
    <string name="send_feedback">"Send Feedback"</string>
    <string name="send_gcode">"Send Gcode"</string>
...
    <!-- Auto filled -->
    <string name="sing_in___probe___trust_and_continue">"Trust &amp; Continue"</string>
    <string name="file_manager___file_details___file_size">"Size"</string>
    <string name="start_printing">"Start Printing"</string>
    <string name="stream_stalled">"Stream stalled"</string>
    <string name="support_octoapp">"Support OctoApp"</string>
...
    <string name="unknown">"Unknown"</string>
    <string name="update_settings">"Update settings"</string>
    <string name="file_manager___file_details___uploaded">"Uploaded"</string>
    <string name="file_manager___thumbnail_info___details">"Install a plugin to get thumbnail previews!"</string>
    <string name="file_manager___thumbnail_info___title">"Using Cura or Prusa Slicer?"</string>
    <string name="webcam">"Webcam"</string>

...
    <string name="x_secs">"%d sec"</string>
    <string name="x_fps">"%d FPS"</string>
    <string name="paused">"Paused"</string>

    <!-- Fuzzy -->
...
