...
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_1_2"
        android:gravity="end"
        android:textAppearance="@style/OctoTheme.TextAppearance.Title"
        app:layout_constraintBottom_toBottomOf="parent"
...
